--- a/ui.html
+++ b/ui.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <title>Stable Diffusion Design Assistant</title>
   <style>
+    body {
+      font: 1em sans-serif;
+    }
+
     input {
       width: 100%;
       height: 40px;
@@ -16,34 +20,112 @@
     }
 
     .size {
+      width: 100%;
+    }
+
+    table {
+      width: 100%;
+      text-align: center;
+      vertical-align: middle;
+    }
+
+    .sizeSliders td,
+    table th {
       width: 50%;
+      text-align: center;
+      vertical-align: middle;
+    }
+
+    .stylesRadio td,
+    table th {
+      width: 33%;
+      text-align: left;
+      vertical-align: left;
     }
 
     img {
+      width: 100%;
+    }
+
+    .row {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+    }
+
+    progress {
       width: 100%;
     }
   </style>
 </head>
 
 <body>
+  <p>Stable Diffusion Hosting URL:</p>
+  <input id="url" type="text" placeholder="Enter a URL" value="http://localhost:7860" />
   <p>Prompt:</p>
   <input id="prompt" type="text" placeholder="Enter a prompt" />
-  <!-- <p>Negative Prompt:</p> -->
-  <!-- <input id="negPrompt" type="text" placeholder="Enter a negative prompt" /> -->
-  <p>Size:</p>
-  <input type="radio" id="option1" class="radio" name="group" value="option1"> <label for="option1">512x512</label>
-  <input type="radio" id="option11" class="radio" name="group" value="option11"> <label
-    for="option11">768x768</label><br>
-  <input type="radio" id="option2" class="radio" name="group" value="option2"> <label for="option2">768x512</label>
-  <input type="radio" id="option3" class="radio" name="group" value="option3"> <label for="option3">960x512</label><br>
-  <input type="radio" id="option4" class="radio" name="group" value="option4"> <label for="option4">512x768</label>
-  <input type="radio" id="option5" class="radio" name="group" value="option5"> <label for="option5">512x960</label><br>
-  <input type="text" class="size" id="width" value="512"><input type="text" class="size" id="height" value="512">
-  <p></p>
-  <button id="txt2img">Text 2 Image</button>
-  <button id="cancel">Cancel</button>
-  <p></p>
-  <input type="button" id="svg" name="svg" value="Generate SVG"/>
+  <table class="sizeSliders">
+    <tr>
+      <th>Width</th>
+      <th>Height</th>
+    </tr>
+    <tr>
+      <td><input type="text" class="size" id="width" value="512"></td>
+      <td><input type="text" class="size" id="height" value="512"></td>
+    </tr>
+    <tr>
+      <td><input type="range" class="size" id="width_slider" min="512" max="960" value="512" step="64"
+          oninput="width_slider.value=parseInt(width_slider.value);document.getElementById('width').value=width_slider.value">
+      </td>
+      <td><input type="range" class="size" id="height_slider" min="512" max="960" value="512" step="64"
+          oninput="height_slider.value=parseInt(height_slider.value);document.getElementById('height').value=height_slider.value">
+      </td>
+    </tr>
+  </table>
+  <table class="stylesRadio">
+    <tr>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+    <tr>
+      <td><input type="radio" class="radio" name="style" value="default" checked><label for="style">Default</label></td>
+      <td><input type="radio" class="radio" name="style" value="photo"><label for="style">Photo</label></td>
+      <td><input type="radio" class="radio" name="style" value="icon"><label for="style">Icon</label></td>
+    </tr>
+    <tr>
+      <td><input type="radio" class="radio" name="style" value="sticker"><label for="style">Sticker</label></td>
+      <td><input type="radio" class="radio" name="style" value="anime"><label for="style">Anime</label></td>
+      <td><input type="radio" class="radio" name="style" value="cartoon"><label for="style">Cartoon</label></td>
+    </tr>
+  </table>
+  <div class="">
+    <p></p>
+    <label id="vectors_guidance_label" for="vectors_guidance_slider">Vectors Guidance: Normal</label>
+    <input type="range" id="vectors_guidance_slider" min="0" max="2" value="1" step="0.5" list="vectors_guidance_data">
+    <datalist id="vectors_guidance_data">
+      <option value="0" label="None">
+      <option value="0.5" label="Free">
+      <option value="1" label="Normal">
+      <option value="1.5" label="Details">
+      <option value="2" label="Same">
+    </datalist>
+  </div>
+  <div class="row">
+    <input type="button" id="txt2img" value="Text 2 Image" />
+  </div>
+  <div class="row">
+    <input type="button" id="auto_mask" disabled value="Auto&#13;&#10;Background Removal" />
+    <input type="button" id="prompt_mask" disabled value="Prompt&#13;&#10;Background Removal" />
+  </div>
+  <div class="row">
+    <input type="button" id="image_2_vectors" disabled value="Image 2 Vectors" />
+    <input type="button" id="vectors_2_image" disabled value="Vectors 2 Image" />
+  </div>
+  <div class="row">
+    <input type="button" id="find_items" disabled value="Find Items" />
+  </div>
+  <progress id="progress" value="0" max="1"></progress>
 </body>
 
 </html>
@@ -51,56 +133,58 @@
 <script src="https://cdn.jsdelivr.net/npm/simplify-js@1.2.4/simplify.min.js"></script>
 <script>
   const txt2imgButton = document.getElementById('txt2img');
-  document.querySelectorAll(".radio").forEach((radio) => {
-    radio.addEventListener("change", (e) => {
-      if (e.target.value === "option1") {
-        document.getElementById('width').value = 512;
-        document.getElementById('height').value = 512;
-      }
-      if (e.target.value === "option11") {
-        document.getElementById('width').value = 768;
-        document.getElementById('height').value = 768;
-      }
-      if (e.target.value === "option2") {
-        document.getElementById('width').value = 768;
-        document.getElementById('height').value = 512;
-      }
-      if (e.target.value === "option3") {
-        document.getElementById('width').value = 960;
-        document.getElementById('height').value = 512;
-      }
-      if (e.target.value === "option4") {
-        document.getElementById('width').value = 512;
-        document.getElementById('height').value = 768;
-      }
-      if (e.target.value === "option5") {
-        document.getElementById('width').value = 512;
-        document.getElementById('height').value = 960;
-      }
-    });
-  });
+  const vectors_2_imageButton = document.getElementById('vectors_2_image');
+  let progressInterval = null;
   document.getElementById('txt2img').onclick = (e) => {
     txt2img();
   }
-  document.querySelector("#svg").addEventListener("click", (e) => {
-    parent.postMessage({ pluginMessage: { type: 'get_selected_image' } }, '*')
+  document.querySelector("#image_2_vectors").addEventListener("click", (e) => {
+    parent.postMessage({ pluginMessage: { type: 'get_selected_image', original_task: "image_2_vectors" } }, '*')
   });
-
-  document.getElementById('cancel').onclick = () => {
-    parent.postMessage({ pluginMessage: { type: 'cancel' } }, '*')
-  }
+  document.querySelector("#auto_mask").addEventListener("click", (e) => {
+    parent.postMessage({ pluginMessage: { type: 'get_selected_image', original_task: "auto_mask" } }, '*')
+  });
+  document.querySelector("#prompt_mask").addEventListener("click", (e) => {
+    parent.postMessage({ pluginMessage: { type: 'get_selected_image', original_task: "prompt_mask" } }, '*')
+  });
+  document.querySelector("#vectors_2_image").addEventListener("click", (e) => {
+    vectors_2_image();
+  });
+  document.querySelector("#find_items").addEventListener("click", (e) => {
+    parent.postMessage({ pluginMessage: { type: 'find_items', original_task: "find_items" } }, '*')
+  });
+  document.querySelector("#vectors_guidance_slider").addEventListener("input", (e) => {
+    switch (e.target.value) {
+      case "0":
+        document.querySelector("#vectors_guidance_label").textContent = `Vectors Guidance: None`;
+        break;
+      case "0.5":
+        document.querySelector("#vectors_guidance_label").textContent = `Vectors Guidance: Free`;
+        break;
+      case "1":
+        document.querySelector("#vectors_guidance_label").textContent = `Vectors Guidance: Normal`;
+        break;
+      case "1.5":
+        document.querySelector("#vectors_guidance_label").textContent = `Vectors Guidance: Details`;
+        break;
+      case "2":
+        document.querySelector("#vectors_guidance_label").textContent = `Vectors Guidance: Same`;
+        break;
+    }
+  });
 
   window.addEventListener('message', event => {
     if (event.data && event.data.pluginMessage.type === 'api_results') {
-      let byte_array = _base64ToUint8Array(event.data.pluginMessage.data);
-      const url = URL.createObjectURL(new Blob([byte_array], { type: 'image/png' }));
-      parent.postMessage({ pluginMessage: { type: 'preview', byte_array } }, '*')
+      on_api_results(event.data.pluginMessage.original_task, event.data.pluginMessage.data);
     }
     if (event.data && event.data.pluginMessage.type === 'done') {
-      txt2imgButton.disabled = false;
+      on_done(event.data.pluginMessage.original_task);
     }
-    if (event.data && event.data.pluginMessage.type === 'selected_image') {
-      generate_svg();
+    if (event.data && event.data.pluginMessage.type === 'image_selected') {
+      on_selected_image(event.data.pluginMessage.original_task, event.data.pluginMessage.data);
+    }
+    if (event.data && event.data.pluginMessage.type === 'sync_img2img_ui') {
+      on_sync_img2img_ui(event.data.pluginMessage.selected_nodes_count);
     }
   });
 
@@ -112,35 +196,97 @@
       txt2img()
     }
   });
-  function generate_svg(){
+
+  async function on_done(original_task) {
+    switch (original_task) {
+      case "txt2img":
+        txt2imgButton.disabled = false;
+        document.getElementById('progress').value = 1;
+        break;
+      case "vectors_2_image":
+        vectors_2_imageButton.disabled = false;
+        document.getElementById('progress').value = 1;
+        break;
+    }
+  }
+  async function on_api_results(original_task, data) {
+    let byte_array = null;
+    switch (original_task) {
+      case "prompt_mask":
+      case "txt2img":
+      case "auto_mask":
+      case "vectors_2_image":
+        byte_array = _base64ToUint8Array(data);
+        parent.postMessage({ pluginMessage: { type: 'create_image_node', original_task, byte_array } }, '*')
+        break;
+    }
+  }
+  async function on_selected_image(original_task, data) {
+    switch (original_task) {
+      case "image_2_vectors":
+        image_2_vectors(data);
+        break;
+      case "auto_mask":
+      case "prompt_mask":
+      case "vectors_2_image":
+        image2image(data, original_task);
+        break;
+    }
+  }
+  function image2image(data, original_task) {
+    var base64 = btoa(new Uint8Array(data).reduce((data, byte) => data + String.fromCharCode(byte), ''),);
+    const style = getSelectedStyle()
+    const textbox_prompt = document.getElementById('prompt');
+    const width_input = document.getElementById('width');
+    const height_input = document.getElementById('height');
+    const url = document.getElementById('url').value;
+    const vectors_guidance = document.getElementById('vectors_guidance_slider').value;
+    let prompt = textbox_prompt.value;
+    let width = width_input.value;
+    let height = height_input.value;
+    const pluginMessage = { type: original_task, imageUrl: base64, prompt, width, height, style, url,vectors_guidance }
+    parent.postMessage({ pluginMessage }, '*')
+  }
+  function image_2_vectors(data) {
     let binary = '';
-    event.data.pluginMessage.data.forEach(byte => binary += String.fromCharCode(byte));
+    data.forEach(byte => binary += String.fromCharCode(byte));
     const base64String = btoa(binary);
     const url = `data:image/png;base64,${base64String}`
     const img = document.createElement('img');
     img.src = url;
     ImageTracer.imageToSVG(url, function (svgstr) {
-        const width_input = document.getElementById('width');
-        const height_input = document.getElementById('height');
-        let width = width_input.value;
-        let height = height_input.value;
-        console.log(svgstr)
-        parent.postMessage({ pluginMessage: { type: 'create_node_from_svg', svgstr,width,height } }, '*')
-      },'smoothed');
+      const width_input = document.getElementById('width');
+      const height_input = document.getElementById('height');
+      let width = width_input.value;
+      let height = height_input.value;
+      console.log(svgstr)
+      parent.postMessage({ pluginMessage: { type: 'create_node_from_svg', svgstr, width, height } }, '*')
+    });
 
   }
   function txt2img() {
     if (txt2imgButton.disabled) {
       return;
     }
+    const style = getSelectedStyle()
     const textbox_prompt = document.getElementById('prompt');
     const width_input = document.getElementById('width');
     const height_input = document.getElementById('height');
+    const url = document.getElementById('url').value;
     let prompt = textbox_prompt.value;
     let width = width_input.value;
     let height = height_input.value;
-    parent.postMessage({ pluginMessage: { type: 'txt2img', prompt, width, height } }, '*')
+    parent.postMessage({ pluginMessage: { type: 'txt2img', prompt, width, height, style, url } }, '*')
     txt2imgButton.disabled = true;
+    progressInterval = setInterval(getProgress, 1000);
+  }
+  function vectors_2_image() {
+    if (vectors_2_imageButton.disabled) {
+      return;
+    }
+    vectors_2_imageButton.disabled = true;
+    parent.postMessage({ pluginMessage: { type: 'get_selected_image', original_task: "vectors_2_image" } }, '*')
+    progressInterval = setInterval(getProgress, 1000);
   }
   function _base64ToUint8Array(base64) {
     var binary_string = window.atob(base64);
@@ -150,5 +296,33 @@
       bytes[i] = binary_string.charCodeAt(i);
     }
     return new Uint8Array(bytes.buffer);
+  }
+  function getSelectedStyle() {
+    return document.querySelector('input[name="style"]:checked').value;
+  }
+  async function getProgress() {
+    const url = document.getElementById('url').value;
+    let res = await fetch(`${url}/sdapi/v1/progress`)
+    let data = await res.json();
+    document.getElementById('progress').value = data.progress;
+    if (data.state.job_count == 0) {
+      clearInterval(progressInterval);
+      document.getElementById('progress').value = 1;
+    }
+  }
+  function on_sync_img2img_ui(selected_nodes_count) {
+    if (selected_nodes_count == 0) {
+      document.getElementById('image_2_vectors').disabled = true;
+      document.getElementById('auto_mask').disabled = true;
+      document.getElementById('prompt_mask').disabled = true;
+      document.getElementById('vectors_2_image').disabled = true;
+      document.getElementById('find_items').disabled = true;
+    } else {
+      document.getElementById('image_2_vectors').disabled = false;
+      document.getElementById('auto_mask').disabled = false;
+      document.getElementById('prompt_mask').disabled = false;
+      document.getElementById('vectors_2_image').disabled = false;
+      document.getElementById('find_items').disabled = false;
+    }
   }
 </script>
