--- a/ui.html
+++ b/ui.html
@@ -95,8 +95,18 @@ label span {
 </head>
 
 <body>
-  <p>Stable Diffusion Hosting URL:</p>
-  <input id="url" type="text" placeholder="Enter a Stable Diffusion Hosting URL" />
+  <table>
+    <tr>
+      <th><p>Hosting URL:</p></th>
+      <th><p>API Key:</p></th>
+    </tr>
+    <tr>
+      <td><input id="url" type="text" placeholder="Enter a Stable Diffusion Hosting URL" /></td>
+      <td><input id="api_key" type="password" placeholder="Enter the API key for Server if needed" /></td>
+    </tr>
+  </table>
+  
+  
   <div class="row">
     <input type="button" id="connect2local" value="Connect to&#13;&#10;Local Server"
       onclick="document.getElementById('url').value='http://localhost:7860';checkAvailibility()" />
@@ -200,6 +210,7 @@ label span {
 <script src="https://cdn.jsdelivr.net/npm/simplify-js@1.2.4/simplify.min.js"></script>
 <script>
   const urlInput = document.getElementById('url');
+  const apikeyInput=document.getElementById('api_key');
   const txt2imgButton = document.getElementById('txt2img');
   const renderSketchButton = document.getElementById('vectors_2_image');
   const autoMaskButton = document.getElementById('auto_mask');
@@ -220,6 +231,10 @@ label span {
   let selected_nodes_count = 0;
   const checkAvailibilityDebouncedHandleInputValueChange = debounce(checkAvailibility, 500);
   urlInput.addEventListener('input', checkAvailibilityDebouncedHandleInputValueChange);
+  apikeyInput.addEventListener('input', (e)=>{
+    let api_key=e.target.value;
+    parent.postMessage({pluginMessage:{type:"update_api_key", api_key:api_key}}, "*");
+  });
   document.getElementById('txt2img').onclick = (e) => {
     txt2img();
   }
@@ -284,6 +299,8 @@ label span {
       setUiAvailiability(event.data.pluginMessage.selected_nodes_count);
     }
     if (event.data && event.data.pluginMessage.type === 'on_initialized') {
+      urlInput.value=event.data.pluginMessage.url;
+      apikeyInput.value=event.data.pluginMessage.api_key;
       checkAvailibility();
       selected_nodes_count = event.data.pluginMessage.selected_nodes_count;
     }
@@ -475,12 +492,13 @@ label span {
   }
   async function checkAvailibility() {
     const url = urlInput.value;
+    const api_key = apikeyInput.value;
     connectionStatusLabel.innerHTML = "Checking connection...";
-    sdServerAvailable = await apiHaveResponse(`${url}/app_id/`);
-    autoMaskAvailable = await apiHaveResponse(`${url}/auto_mask/status`);
-    figmaAvailable = await apiHaveResponse(`${url}/figma/status`);
-    promptMaskAvailable = await apiHaveResponse(`${url}/prompt_mask/status`);
-    controlNetAvailable = await apiHaveResponse(`${url}/controlnet/version`);
+    sdServerAvailable = await apiHaveResponse(`${url}/app_id/`,{method: 'GET', headers: {tecky_api_service_key: api_key}});
+    autoMaskAvailable = await apiHaveResponse(`${url}/auto_mask/status`,{method: 'GET', headers: {tecky_api_service_key: api_key}});
+    figmaAvailable = await apiHaveResponse(`${url}/figma/status`,{method: 'GET', headers: {tecky_api_service_key: api_key}});
+    promptMaskAvailable = await apiHaveResponse(`${url}/prompt_mask/status`,{method: 'GET', headers: {tecky_api_service_key: api_key}});
+    controlNetAvailable = await apiHaveResponse(`${url}/controlnet/version`,{method: 'GET', headers: {tecky_api_service_key: api_key}});
     setUiAvailiability(selected_nodes_count);
     connectionStatusLabel.innerHTML = "";
     parent.postMessage({ pluginMessage: { type: 'check_availibility', original_task: "check_availibility" ,url} }, '*');
